Fixed width of project cards so that they don't extend outside of page on mobile.

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -89,7 +89,7 @@
   }
 
   .cardContainer.projects {
-    grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   }
 
   .skillWrapper {
